--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@radix-ui/react-select": "^2.2.6",
+    "aws-sdk": "^2.1692.0",
     "babel-plugin-react-compiler": "^1.0.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
