--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
-    "uuid": "^13.0.0"
+    "three": "^0.135.0",
+    "uuid": "^13.0.0",
+    "web-ifc": "0.0.39",
+    "web-ifc-viewer": "1.0.218"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -29,6 +32,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.181.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
