--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.546.0",
+    "mysql2": "^3.15.3",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
